# Duckify

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  README.md  benchmark_pipeline.py  docker-compose.yml  index.html  main.ipynb  main.py  portfolios.md  pyproject.toml  pyrightconfig.json  robot_requirements.txt
.github/workflows/: docs.yaml
3dmodel/duck/: duck_model_3.ipt  duck_model_3.stp  duck_model_3_oriented.stl
3dmodel/metal_plate/: metal_base.ipt
3dmodel/modeletest/: slope_test_model.idw  slope_test_model.ipt  slope_test_model.stp
3dmodel/support/: support_sketch_2.ipt
3dmodel/support/duck/: support_sketch_1.ipt
3dmodel/support/pen/: pen_format_1.ipt  pen_support_vf1.stp
3dmodel/wood/: wood_support_hole.idw
3dmodel/wood/actual/: wooden_support_duck_pins.dxf  wooden_support_duck_pins.ipt  wooden_support_pen_pins.ipt  wooden_support_pens_pins.dxf
ISC/: _log.txt  calibration_0.pkl  joint_segments_0.pkl  pen_calibration_0.pkl  tcp_segments_0.pkl  trace_segments_0.pkl  transformation_0.pkl
assets/: transformation_reference.json
assets/blender/: duck_unreachable_zones.blend
assets/models/: duck_uv.stl  duck_uv_low_poly.stl  duck_uv_v2.glb  j2.glb  official_model_1.glb  support_duck_simulation.stl  trapezoid.stl  workspace.stl
assets/tests/: duck_uv-ISC_infinity.json  duck_uv-test_10_full_body_line-trace.json  duck_uv-test_1_triangle-trace.json  duck_uv-test_2_circle-trace.json  duck_uv-test_3_circle_full-trace.json  duck_uv-test_4_triangle_on_bill-trace.json  duck_uv-test_5_triangle_on_back-trace.json  duck_uv-test_6_eyes-trace.json  duck_uv-test_7_torso-trace.json  duck_uv-test_8_on_head-trace.json  duck_uv-test_9_3_colors-trace.json  duck_uv_v2-army-trace.json  duck_uv_v2-clown-trace-with-filling.json  duck_uv_v2-clown-trace-without-filling.json  duck_uv_v2-clown_triste-trace.json  duck_uv_v2-firefighter-trace.json  duck_uv_v2-test_11_long_line-trace.json  duck_uv_v2-test_12_circle-trace.json  duck_uv_v2-test_13_cutted_lines-trace.json  duck_uv_v2-test_14_full_body_line-trace.json  duck_uv_v2-test_15_colored_lines-trace.json  duck_uv_v2-test_16_colored_lines_both_wings-trace.json  tribal-right-wing-trace.json
docker/: docker-compose.yml  duckify.Dockerfile
docs/: fonts.yaml
docs/3dprinting/: 3d_printer_settings.typ
docs/3dprinting/assembly/: Assembly_no_placed.iam  Assembly_support_1.iam  Assembly_two_fit_supports_pins.iam
docs/3dprinting/duck_model/: main.typ
docs/architecture/: github_policy.typ  tracing_algo.typ
docs/architecture/genai/: pipeline.typ
docs/architecture/robot/: architecture.drawio  cone_search_analysis.typ  cone_search_design.typ  reachability_cone_search.typ  reachability_logic.typ  robot_technical_analysis.typ  setup-guide.md
docs/architecture/tracing/: Artefacts-removal.typ  artefacts-removal.typ  border-detection-refinement.typ  fill-slicing-debug-2.typ  general-overview.typ  improvements.typ  reduction.typ  (+1 more)
docs/genai/: finetuning.typ  i2t_recherche.typ  prompt_generation_analysis.typ  t2t_recherche.typ
docs/meetings/: 2026-02-18.typ  2026-02-19.typ
docs/planning/: demonstration_ceo.typ  steps_milestones.typ  template.typ
docs/research/: projection_solution.typ  support_placement.typ
docs/robot/: lab_checklist.typ
genai/: .env.client.example  .env.example  .env.server.example  .gitattributes  README.md  app.py  client.py  data.py  main.py  models.py  pyproject.toml  readme.md  run.slurm  server.py
genai/MV-Adapter/: render.py  script.slurm
genai/MV-Adapter/assets/demo/ig2mv/: cartoon_style_table.glb
genai/MV-Adapter/scripts/: inference_tg2mv_sdxl.py  texture_t2tex.py
genai/models/: test12.glb
genai/source/: model.py
genai/textures/handmade_round_texture/blue_red/: blue_red.blend
genai/textures/handmade_round_texture/green_blue/: green_blue.blend  green_blue.mtl
genai/textures/handmade_round_texture/green_red/: green_red.blend  green_red.mtl
genai/textures/handmade_square_texture/green_blue/: green_blue.blend  green_blue.mtl
genai/textures/handmade_square_texture/green_red/: green_red.blend  green_red.mtl
genai/textures/model_ImageToTexture/blue/: blue.glb
genai/textures/model_ImageToTexture/bluered/: i2_br.glb
genai/textures/model_ImageToTexture/greenred/: green_red.glb
genai/textures/model_ImageToTexture/swiss/: swiss.glb  swiss_square.glb
genai/textures/model_ImageToTexture/yellow/: yellow.glb  yellow_square.glb
genai/textures/model_TextToTexture/Round/Yellow/: Yellow.blend
robot/: README.md  pyproject.toml  robot_main.py
robot/.docker/: Dockerfile.robot  docker-compose.yml
robot/docker/: docker-compose.yml
robot/duckify_simulation/defaults/: calibration_transforamtion.json  calibration_transformation.json  pen_calibration_test.pkl  transformation_test.pkl  worldtcp_test.pkl
robot/duckify_simulation/duckify_sim/: duckify_sim.py  robot_control.py  ros_bridge.py
robot/duckify_simulation/urdf/: ur3e.urdf
robot/duckify_simulation/urdf/meshes/ur3e/collision/: pen_simulation.stl
robot/duckify_simulation/urdf/meshes/ur3e/visual/: wrist_cam.stl
robot/src/: calibration.py  computation.py  config.py  conversion.py  executor.py  filter.py  gazebo.py  kinematics.py  logger.py  pathfinding.py  pathfinding_.py  pen.py  pybullet_helpers.py  replay.py  robot.py  safety.py  segment.py  stage.py  transformation.py  utils.py
tracing/: .gitattributes  color.py  config.py  hierarchy.py  island.py  main.py  point_3d.py  pyproject.toml  segment.py  stats.py  trace.py  tracer.py
ui/: assets.py  build_ui_files.py  calibration.py  calibration.ui  main.py  main.ui  mesh_visualizer.py  models.py  pen_calibration.py  pyproject.toml  settings.py  settings.ui  settings_manager.py  transformation.py  transformation.ui  utils.py  workspace.py
ui/controllers/: gen_ai.py  robot.py  tracing.py
ui/dialogs/: calibration.py  pen_calibration.py  settings.py  transformation.py
ui/services/: gen_ai.py  robot.py  tracing.py
ui/ui/: calibration.ui  main.ui  pen_calibration.ui  settings.ui  transformation.ui
ui/utils/: misc.py  worker.py
urbasic/: main.py  pyproject.toml
(+67 files in other folders)
