[project]
name = "duckify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "tracing",
    "robot",
]

[tool.uv.workspace]
members = [
    "tracing",
    "robot",
    "genai",
    "ui",
]

[tool.uv.sources]
genai = { workspace = true }
tracing = { workspace = true }
robot = { workspace = true }
ui = { workspace = true }
