[project]
name = "duckify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "tracing",
    "robot",
    "pybullet-planning",
    "genai",
    "ui",
    "urbasic",
]

[tool.uv.workspace]
members = [
    "tracing",
    "robot",
    "genai",
    "ui",
    "urbasic",
]

[tool.uv.sources]
genai = { workspace = true }
tracing = { workspace = true }
robot = { workspace = true }
ui = { workspace = true }
pybullet-planning = { git = "https://github.com/yijiangh/pybullet_planning", rev = "dev" }
urbasic = { workspace = true }
