[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=42.0.0",
    "docker>=7.1.0",
    "matplotlib>=3.10.8",
    "paramiko>=3.5.0",
    "pathlib>=1.0.1",
    "sshtunnel>=0.4.0",
]


[tool.setuptools.packages.find]
where = ["source"]
