[project]
name = "tracing"
version = "0.1.0"
description = "Wrapped texture and UV mapping to 3D segment coordinates pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyglet<2",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "trimesh>=4.11.2",
]

[tool.setuptools]
packages = ["tracing"]
package-dir = { "tracing" = "." }
