
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "URBasic"
version = "0.0.1"
description = "Python library to control an UR robot"
readme = "README.md"
authors = [
    {name = "Mandelbr0t"},
    {name = "Axam"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = []
license = {text = "GNU Lesser General Public License v3"}
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/oroulet/python-urx"
